Add test for refresh handler
