# docs/swagger.json
@@ -102,12 +102,6 @@
                         "schema": {
                             "$ref": "#/definitions/swagger.UnauthorizedResponse"
                         }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/swagger.ServerErrorResponse"
-                        }
                     }
                 }
             }
